# dreamchess-plusplus

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
cmake/: CodeCoverage.cmake
include/: Board.hpp  Game.hpp  History.hpp  Move.hpp  Piece.hpp
report/: dreamchess++.tex
src/: Board.cpp  Game.cpp  History.cpp  Move.cpp  Piece.cpp
test/: board_test.cpp  game_test.cpp  piece_test.cpp
